plugins {
//    id "org.jetbrains.intellij" version "1.17.2"
    id 'org.jetbrains.intellij.platform' version '2.3.0'
    id "java"
}

def v = "1.0.10"

group "com.joker"
version v

tasks.withType(JavaCompile).configureEach {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    options.encoding = "UTF-8"
    options.warnings = false
}

intellijPlatform {
    pluginConfiguration {
        id = 'com.joker.serial_number'
        name = 'Serial Number'
        version = v
        ideaVersion {
            sinceBuild = '201'
//            untilBuild = '241.*'
            untilBuild = provider { null } as Provider<? extends String>
        }
        vendor {
            name = 'Joker'
            email = '1908105978@qq.com'
            url = 'https://github.com/Joker-Q4/serial_number'
        }
    }
}

patchPluginXml {
    version = v
//    sinceBuild = "201"
//    untilBuild = "*"
}

repositories {
    intellijPlatform {
        defaultRepositories()
    }
    maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
    maven { url "https://maven.aliyun.com/repository/central" }
    maven { url "https://maven.aliyun.com/repository/public" }
    maven { url "https://maven.aliyun.com/repository/google" }
    maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
    maven { url "https://plugins.gradle.org/m2/" }
}

// Configure Gradle IntelliJ Plugin
// Read more: https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
//intellij {
//    plugins = ["com.intellij.java"]
//    version = "2023.3.2"
//    type = "IC"
//    downloadSources = true
//    updateSinceUntilBuild = false
//}

test {
    useJUnitPlatform()
}

dependencies {
    intellijPlatform {
//        local 'D:\\Program Files\\JetBrains\\IntelliJ IDEA 2024.3.2.2'
        local 'D:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 2024.3.4.1'
    }
}

runIde {
    jvmArgs "--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED", "-Dfile.encoding=utf-8"
}